<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WC-Finder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_wc_detail">WC Anlage (Details)</string>
    <string name="leer"></string>
    <string name="bezirk">Bezirk</string>
    <string name="strasse">Strasse</string>
    <string name="orientierungsnummer">Orientierungsnummer</string>
    <string name="telefon">Telefon</string>
    <string name="oeffnungszeit">Öffnungszeit</string>
    <string name="information">Information</string>
    <string name="abteilung">Abteilung</string>
    <string name="kategorie">Kategorie</string>
    <string name="navigate">Zum WC navigieren</string>

</resources>
